gateway-api_example/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-httproute
  namespace: httproute
spec:
  parentRefs:
  - name: my-gateway
    namespace: gateway-system
  # more gateway parents can be references
  #  - name: my-gateway2
  #    namespace: gateway-system
  hostnames:
  - "www.example.com"
  - "api.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /admin
      headers:
      - type: Exact
        name: x-role
        value: admin
      queryParams:
      - name: "env"
        value: "sandbox"
        type: Exact
    backendRefs:
    - name: service3
      port: 1245
  - matches:
      headers:
      - type: Exact
        name: x-role
        value: user
    backendRefs:
    - name: service1
      port: 1241
