gateway-api_example/httpRouteWithMultipleMatches.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: multi-match-route
spec:
  parentRefs:
  - name: my-gateway
    namespace: gateway-system
    sectionName: http-alt
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /admin
          headers:
          - type: Exact
            name: x-role
            value: admin
          queryParams:
          - name: "env"
            value: "sandbox"
            type: Exact
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: x-header-add
                value: fortiadc
            set:
              - name: x-forwarded-by
                value: fortiadc
            remove:
              - x-internal
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /api
            hostname: "backend.internal"
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
            - name: "X-Resp-Add"
              value: "success"
            set:
            - name: "X-Resp-Set"
              value: "static-string"
            remove:
            - "Server"
      backendRefs:
        - name: service1
          port: 1241
          weight: 90
        - name: tcp-echo-service
          port: 12345
          weight: 10

    - matches:
        - path:
            type: PathPrefix
            value: /superadmin
          headers:
            - type: Exact
              name: x-role
              value: superadmin
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: x-forwarded-by
                value: fortiadc
            remove:
              - x-internal
        - type: RequestRedirect
          requestRedirect:
            hostname: "new-app.example.com"
            port: 8443
            statusCode: 302
      backendRefs:
        - name: service1
          port: 1241
        - name: service2
          port: 1242

    - matches:
        - path:
            type: Exact
            value: /health
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: x-forwarded-by
                value: fortiadc
            remove:
              - x-internal
      backendRefs:
        - name: service1
          port: 1241
          weight: 10
        - name: service2
          port: 1242
          weight: 90
